sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:17: error: value -+ is not a member of Int
      if (plusPetit(fin-+compt+j+1, fin-j+compt)){
                       ^